test/src/e2e_vm_tests/test_programs/should_fail/calling_context_mismatch/src/main.sw
script;

#[context(internal_only)]
fn bar() {}

fn baz() {
  bar();
}

fn main() {
  baz();
}
